# AETHERIX

./: .editorconfig  .gitattributes  CODE_OF_CONDUCT.md  Cargo.toml  README.md  app.js  feedback.json  index.html  manifest.json  style.css  sw.js
.github/workflows/: ci.yml
scripts/: analytics.jl  data_stream.py  doc_gen.rb
src/: analytics.cpp  lib.rs  master_systems.cpp  modern_apps.scala  monitor.ts  vault_extension.rs
views/: about.html  faqs.html  glossary.html  kronos.html  obelisk.html  roadmap.html
